glx/testdata/invalid/missing-required-fields/relationships/rel-missing-type.glx
relationships:
  rel-missing-type:
    participants:
      - person: person-123
        role: subject


